completed / app templates

--- a/docs/Events/2025-MSBuild/02.md
+++ b/docs/Events/2025-MSBuild/02.md
@@ -1,1 +1,39 @@
 # 2. AI App Templates
+
+!!! info "[**Read The Blog Post**](https://devblogs.microsoft.com/foundry/accelerate-app-development-with-ai-templates-in-azure-ai-foundry/) to see the full list of templates and links to repositories"
+
+<iframe width="800" height="450" src="https://www.youtube.com/embed/xbRrAmy0ChA" title="AI templates in Azure AI Foundry" frameborder="0" allowfullscreen></iframe>
+
+---
+
+## 2.1 App Templates Benefits
+
+1. 10+ curated templates available today
+1. Use cases selected from 1000+ customer engagements
+1. Quick start (deployment) & customizable (your app, data)
+1. Architecture, Open-Source Sample, Cost Estimator
+
+---
+
+## 2.2 Quickstart: AI Chat App 
+
+See: [Get Started with AI Chat](https://aka.ms/get-started-with-ai-chat)
+
+![Arch](https://github.com/Azure-Samples/get-started-with-ai-chat/raw/main/docs/architecture.png)
+
+---
+
+## 2.3 Quickstart: AI Agent 
+
+See: [Get Started with AI Agents](https://aka.ms/get-started-with-ai-agents)
+
+![Arch](https://github.com/Azure-Samples/get-started-with-ai-agents/raw/main/docs/architecture.png)
+
+---
+
+## 2.4 Multi-Agent Automation
+
+See: [Multi-Agent Automation Solution Accelerator](https://github.com/microsoft/Multi-Agent-Custom-Automation-Engine-Solution-Accelerator)
+
+![Arch](https://github.com/microsoft/Multi-Agent-Custom-Automation-Engine-Solution-Accelerator/raw/main/documentation/images/readme/macae-architecture.png)
+
