--- a/docs/Events/2025-MSBuild/01.md
+++ b/docs/Events/2025-MSBuild/01.md
@@ -1,6 +1,6 @@
 # 1. Foundry Models
 
-!!! info "Azure AI Foundry models offer the best choice for AI developers - with 11K+ models today!"
+!!! info "Azure AI Foundry models offer the best choice for AI developers. <br/> **See: [Model Catalog](https://ai.azure.com/explore/models)**"
     
 Every AI developer journey begins with model selection. In this section we focus on the _breadth of new model choices_ available in Azure AI Foundry, and put the spotlight on a few key partners that expand the model catalog in interesting ways.
 
