--- a/docs/Events/2025-MSBuild/02.md
+++ b/docs/Events/2025-MSBuild/02.md
@@ -1,6 +1,6 @@
 # 2. AI App Templates
 
-!!! info "[**Read The Blog Post**](https://devblogs.microsoft.com/foundry/accelerate-app-development-with-ai-templates-in-azure-ai-foundry/) to see the full list of templates and links to repositories"
+!!! info "Accelerate app development with tutorials (build new) and solution templates (reuse & extend). <br/> **See [Code Templates](https://ai.azure.com/templates?)** for exploration. <br/>  **See [Blog Post](https://devblogs.microsoft.com/foundry/accelerate-app-development-with-ai-templates-in-azure-ai-foundry/)** for details."
 
 <iframe width="800" height="450" src="https://www.youtube.com/embed/xbRrAmy0ChA" title="AI templates in Azure AI Foundry" frameborder="0" allowfullscreen></iframe>
 
